2007-01-29  Brian Gough  <bjg@network-theory.co.uk>

	* test_legendre.c (test_legendre): added extra test cases for
	underflow

2007-01-26  Brian Gough  <bjg@network-theory.co.uk>

	* expint.c (expint_E2_impl): handle x==0.0 as a special case
	(expint_E2_impl): corrected error term

	* gsl_sf_log.h: removed inline version of log

	* gsl_sf_exp.h: removed inline version of exp

2007-01-23  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_1F1.c (hyperg_1F1_1_series): increase accuracy by factor
	of 4 in sum, tighter convergence condition, increase error
	estimate to allow for accumulated roundoff
	(hyperg_1F1_1): use series when |x| > |b|
	(gsl_sf_hyperg_1F1_e): only use Kummer when |x| < 100 otherwise
	exponential takes extreme value

	* hyperg.c (gsl_sf_hyperg_1F1_series_e): allow 10000 iterations in
	series to extend valid range
	(gsl_sf_hyperg_1F1_series_e): increase accuracy by factor of 4 in
	sum, tighter convergence condition

2007-01-19  Brian Gough  <bjg@network-theory.co.uk>

	* laguerre.c (laguerre_large_n): use the second term in the
	asymptotic expansion from Slater, p.73.

2007-01-17  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_1F1.c (hyperg_1F1_largebx): asymptotic expansion for
	large b and x, with |x|<|b| from Slater 4.3.7
	(hyperg_1F1_1): use new asymptotic expansion for |x|<|b|
	(hyperg_1F1_small_a_bgt0): use new asymptotic expansion for |x|<|b|
	(hyperg_1F1_renorm_b0): add neglected terms in expansion for AS13.3.7

2007-01-14  Brian Gough  <bjg@network-theory.co.uk>

	* legendre_poly.c (gsl_sf_legendre_sphPlm_e): added explicit
	computation of error term to allow for case when final term is
	zero.

2007-01-12  Brian Gough  <bjg@network-theory.co.uk>

	* trig.c (gsl_sf_angle_restrict_symm_err_e): compute edge cases
	more reliably, return NaN when total loss of precision
	(gsl_sf_angle_restrict_pos_err_e): as above

	* legendre_poly.c (gsl_sf_legendre_Pl_e): improve error estimate